Bug 7508 - Nokia E70 USB file transfer fails
Summary: Nokia E70 USB file transfer fails
Status: RESOLVED PATCH_ALREADY_AVAILABLE
Alias: None
Product: Drivers
Classification: Unclassified
Component: USB (show other bugs)
Hardware: i386 Linux
: P2 normal
Assignee: Greg Kroah-Hartman
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2006-11-13 00:29 UTC by honkkis
Modified: 2006-11-13 17:05 UTC (History)
0 users

See Also:
Kernel Version: All kernels - 2.6.18.2
Subsystem:
Regression: ---
Bisected commit-id:


Attachments
Patch to add E70 details to unusual_devs.h (801 bytes, patch)
2006-11-13 00:30 UTC, honkkis
Details | Diff

Description honkkis 2006-11-13 00:29:34 UTC
Distribution: Kubuntu 6.10
Hardware Environment: HP NX8220
Software Environment: 2.6.17.3 - 2.6.18.2 vanilla kernel
Problem Description: 

When the Nokia E70 Phone is plugged in to the USB port, I get:

end_request: I/O error, dev sda, sector 1824527
sd 0:0:0:0: SCSI error: return code = 0x10070000
end_request: I/O error, dev sda, sector 1824535
sd 0:0:0:0: SCSI error: return code = 0x10070000

http://www.mail-archive.com/linux-usb-users@lists.sourceforge.net/msg16879.html

The fix is to add these lines to drivers/usb/storage/unusual_devs.h:

UNUSUAL_DEV(  0x0421, 0x0433, 0x0100, 0x0100,
                "Nokia",
                "E70",
                US_SC_DEVICE, US_PR_DEVICE, NULL,
                US_FL_IGNORE_RESIDUE | US_FL_FIX_CAPACITY ),

Steps to reproduce:
Plug in Nokia E70.
Comment 1 honkkis 2006-11-13 00:30:16 UTC
Created attachment 9482 [details]
Patch to add E70 details to unusual_devs.h

Note You need to log in before you can comment on or make changes to this bug.